--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+APScheduler==3.10.4
 asgiref==3.8.1
 attrs==23.2.0
 blinker==1.7.0
@@ -14,9 +15,12 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 multidict==6.0.5
 persiantools==4.0.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2024.1
 requests==2.31.0
+six==1.16.0
+tzlocal==5.2
 urllib3==2.2.1
 Werkzeug==3.0.2
 yarl==1.9.4
-python-decouple==3.8
